Bug 140678 - Fix unused-const-variable warning in RenderLayerCompositor.cpp
Summary: Fix unused-const-variable warning in RenderLayerCompositor.cpp
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Csaba Osztrogonác
URL:
Keywords:
Depends on:
Blocks: 145121
  Show dependency treegraph
 
Reported: 2015-01-20 07:48 PST by Csaba Osztrogonác
Modified: 2015-05-18 02:43 PDT (History)
6 users (show)

See Also:


Attachments
Patch (1.42 KB, patch)
2015-01-20 07:49 PST, Csaba Osztrogonác
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Csaba Osztrogonác 2015-01-20 07:48:09 PST
Source/WebCore/rendering/RenderLayerCompositor.cpp:91:18: warning: unused variable 'canvasAreaThresholdRequiringCompositing' [-Wunused-const-variable]
static const int canvasAreaThresholdRequiringCompositing = 50 * 100;
                 ^
1 warning generated.
Comment 1 Csaba Osztrogonác 2015-01-20 07:49:23 PST
Created attachment 244992 [details]
Patch
Comment 2 WebKit Commit Bot 2015-01-20 08:48:43 PST
Comment on attachment 244992 [details]
Patch

Clearing flags on attachment: 244992

Committed r178712: <http://trac.webkit.org/changeset/178712>
Comment 3 WebKit Commit Bot 2015-01-20 08:48:48 PST
All reviewed patches have been landed.  Closing bug.