Fix unused-const-variable warning in RenderLayerCompositor.cpp https://bugs.webkit.org/show_bug.cgi?id=140678

Reviewed by Simon Fraser.

* rendering/RenderLayerCompositor.cpp:


Canonical link: https://commits.webkit.org/158641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178712 268f45cc-cd09-0410-ab3c-d52691b4dbfc